crates/parser/src/snapshots/parser__tests__parse_inline_ok@0003_simple_unit_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "()\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0003_simple_unit_expr.ath
---
UNIT_EXPR
  UNIT
    L_PAREN "("
    R_PAREN ")"
  WHITESPACE "\n"

