crates/parser/src/snapshots/parser__tests__parse_inline_ok@0005_simple_compound_sort.ath.snap
---
source: crates/parser/src/tests.rs
description: "?x: (List Int)\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0005_simple_compound_sort.ath
---
TERM_VAR_EXPR
  QUESTION "?"
  IDENT "x"
  COLON ":"
  WHITESPACE " "
  COMPOUND_SORT
    L_PAREN "("
    IDENT_SORT
      NAME_REF
        IDENT "List"
    WHITESPACE " "
    IDENT_SORT
      NAME_REF
        IDENT "Int"
    R_PAREN ")"
  WHITESPACE "\n"

