crates/parser/src/snapshots/parser__tests__parse_inline_ok@0006_simple_ident_sort.ath.snap
---
source: crates/parser/src/tests.rs
description: "?x: bar\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0006_simple_ident_sort.ath
---
TERM_VAR_EXPR
  QUESTION "?"
  IDENTIFIER
    IDENT "x"
  COLON ":"
  WHITESPACE " "
  IDENT_SORT
    IDENTIFIER
      IDENT "bar"
      WHITESPACE "\n"

