crates/parser/src/snapshots/parser__tests__parse_inline_ok@0007_simple_var_sort.ath.snap
---
source: crates/parser/src/tests.rs
description: "?x: 'foo\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0007_simple_var_sort.ath
---
TERM_VAR_EXPR
  QUESTION "?"
  IDENT "x"
  COLON ":"
  WHITESPACE " "
  VAR_SORT
    SINGLE_QUOTE "'"
    IDENTIFIER
      IDENT "foo"
  WHITESPACE "\n"

