crates/parser/src/snapshots/parser__tests__parse_inline_ok@0008_simple_sort.ath.snap
---
source: crates/parser/src/tests.rs
description: "?x: Int\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0008_simple_sort.ath
---
TERM_VAR_EXPR
  QUESTION "?"
  IDENTIFIER
    IDENT "x"
  COLON ":"
  WHITESPACE " "
  IDENT_SORT
    IDENTIFIER
      IDENT "Int"
  WHITESPACE "\n"

