crates/parser/src/snapshots/parser__tests__parse_inline_ok@0010_simple_lambda_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "lambda (x y z) \"hello world\"\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0010_simple_lambda_expr.ath
---
LAMBDA_EXPR
  LAMBDA_KW "lambda"
  WHITESPACE " "
  L_PAREN "("
  MAYBE_WILDCARD_TYPED_PARAM
    IDENTIFIER
      IDENT "x"
  WHITESPACE " "
  MAYBE_WILDCARD_TYPED_PARAM
    IDENTIFIER
      IDENT "y"
  WHITESPACE " "
  MAYBE_WILDCARD_TYPED_PARAM
    IDENTIFIER
      IDENT "z"
  R_PAREN ")"
  WHITESPACE " "
  LITERAL_EXPR
    LITERAL
      STRING "\"hello world\""
  WHITESPACE "\n"

