crates/parser/src/snapshots/parser__tests__parse_inline_ok@0011_lambda_expr_no_args.ath.snap
---
source: crates/parser/src/tests.rs
description: "lambda () \"hello world\"\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0011_lambda_expr_no_args.ath
---
LAMBDA_EXPR
  LAMBDA_KW "lambda"
  WHITESPACE " "
  L_PAREN "("
  R_PAREN ")"
  WHITESPACE " "
  LITERAL_EXPR
    LITERAL
      STRING "\"hello world\""
  WHITESPACE "\n"

