crates/parser/src/snapshots/parser__tests__parse_inline_ok@0012_simple_application_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "(foo bar baz)\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0012_simple_application_expr.ath
---
APPLICATION_EXPR
  L_PAREN "("
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "foo"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "bar"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "baz"
  R_PAREN ")"
  WHITESPACE "\n"

